# threatware

./: .dockerignore  .gitignore  CHANGELOG.md  Containerfile  README.md  api_requirements.txt  dockerfile  privacy-policy.md  requirements.txt  setup.cfg
actions/: api_main.py  convert.py  handler.py  handler_texts.yaml  manage.py  measure.py  verify.py
confluence_convertor/: convertor.py
convertors/: convertors_config.py  convertors_config.yaml  convertors_texts.yaml
convertors/confluence_convertor/: __init__.py  convertor.py  reader.py
convertors/gdoc_convertor/: convertor.py  credentials.json  reader.py  token.json
convertors/html_convertor/: convertor.py  query.py
data/: data_config.py  find.py  get.py  key.py  map.py  output.py  value.py
gdoc_convertor/: convertor.py  reader.py
html_convertor/: convertor.py
language/: translate.py  translate.yaml
manage/: manage_config.py  manage_config.yaml  manage_output.py  manage_storage.py  manage_texts.yaml  metadata.py
manage/storage/: gitrepo.py
measure/: measure_config.py  measure_config.yaml  measure_distance.py  measure_output.py  measure_texts.yaml
providers/: api.py  aws_lambda.py  cli.py  provider.py  providers_config.yaml  providers_dispatch.yaml
response/: html_response.py  response.py  response_config.py  response_config.yaml  response_texts.yaml
schemes/: confluence-scheme-1.0.yaml  googledoc-scheme-1.0.yaml  schemes.py  schemes.yaml
storage/: git_permanent_repo.py  gitrepo.py
test/actions/: conftest.py  test_verify.py
test/schemes/: test_schemes.py
test/utils/: test_load_yaml.py
test/validators/: test_date.py  test_regex.py  test_template.py  test_validator.py  test_validators.py  validator_config.yaml  validators.yaml
test/verifiers/: conftest.py  test_mandatory.py  (+6 more)
utils/: config.py  error.py  html_output.py  keymaster.py  load_modules.py  load_yaml.py  logging.py  match.py  model.py  output.py  output_texts.yaml  property_str.py  request.py  shell.py  tags.py  text_query.py  transform.py  value_query.py
validators/: date.py  exists.py  regex.py  string.py  template.py  validator_output.py  validators.py  validators_config.yaml  validators_dispatch.yaml  validators_text.yaml
verifiers/: TODO  authnz_values.py  coverage_validation.py  default_tag_mapping.yaml  example.py  field_validation_conditional.py  field_validation_conditional_mandatory.py  field_validation_mandatory.py  field_validation_uniqueness.py  field_validation_value.py  reference.py  reference_validation.py  threat_coverage.py  verifier_error.py  verifiers.py  verifiers_config.py  verifiers_config.yaml  verifiers_dispatch.yaml  verifiers_report.py  verifiers_texts.yaml  verifiers_values.yaml
