[metadata]
name = threatware
version = 0.9.1
author = samadhicsecurity
author_email = dave@samadhicsecurity.com
description = Simplifies the review and management of threat models in documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samadhicsec/threatware
project_urls =
    Documentation = https://threatware.readthedocs.io/en/main/
    Tracker = https://github.com/samadhicsec/threatware/issues
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    atlassian-python-api>=3.20.1
    boto3>=1.21.30
    botocore>=1.24.30
    google-api-core>=2.7.1
    google-api-python-client>=2.42.0
    google-auth>=2.6.2
    google-auth-httplib2>=0.1.0
    google-auth-oauthlib>=0.5.1
    googleapis-common-protos>=1.56.0
    html-table-parser-python3>=0.2.0
    Jinja2>=3.1.1
    jsonpickle>=2.1.0
    lxml>=4.8.0
    python-dateutil>=2.8.2
    ruamel.yaml>=0.17.21
    sh>=1.14.2

[options.packages.find]
where = .
exclude = 
    .*
    test

[options.package_data]
* =
    *.yaml

[options.entry_points]
console_scripts =
    threatware = actions.handler:main