[metadata]
name = threatware
version = 0.9.5
author = samadhicsecurity
author_email = dave@samadhicsecurity.com
description = Simplifies the review and management of threat models in documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samadhicsec/threatware
project_urls =
    Documentation = https://threatware.readthedocs.io/en/main/
    Tracker = https://github.com/samadhicsec/threatware/issues
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    atlassian-python-api>=3.41.16
    boto3>=1.35.32
    google-api-python-client>=2.147.0
    google-auth-oauthlib>=1.2.1
    html2text>=2024.2.26
    html-table-parser-python3>=0.3.1
    Jinja2>=3.1.3
    jsonpickle>=3.3.0
    lxml>=5.3.0
    python-dateutil>=2.8.2
    ruamel.yaml>=0.18.6
    sh>=2.0.7

[options.packages.find]
where = .
exclude = 
    .*
    test

[options.package_data]
* =
    *.yaml

[options.entry_points]
console_scripts =
    threatware = actions.handler:main